Import UIKit into index.scss.

--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,24 @@
+// ==================================================================
+// UIkit
+// ==================================================================
+
+// 1. Your custom variables and variable overwrites.
+// $global-link-color: #DA7D02;
+
+// 2. Import default variables and available mixins.
+@import "node_modules/uikit/src/scss/variables-theme.scss";
+@import "node_modules/uikit/src/scss/mixins-theme.scss";
+
+// 3. Your custom mixin overwrites.
+// @mixin hook-card() { color: #000; }
+
+// 4. Import UIkit.
+@import "node_modules/uikit/src/scss/uikit-theme.scss";
+
+// ==================================================================
+// Base
+// ==================================================================
+
 * {
     font-family: 'Quicksand', sans-serif;
 }
@@ -16,6 +37,10 @@ header {
 
 }
 
+// ==================================================================
+// Main
+// ==================================================================
+
 main {
 
     max-width: 1200px;
@@ -30,6 +55,10 @@ main {
     row-gap: 50px;
 
 }
+
+// ==================================================================
+// User
+// ==================================================================
 
 .user {
 
@@ -154,6 +183,10 @@ main {
 
 }
 
+// ==================================================================
+// Cards
+// ==================================================================
+
 .cards {
 
     width: 100%;
@@ -200,6 +233,10 @@ main {
     cursor: pointer;
 
 }
+
+// ==================================================================
+// Card content
+// ==================================================================
 
 table {
     
