Move CSS over to UIkit. First pass at styling.

--- a/index.scss
+++ b/index.scss
@@ -2,31 +2,63 @@
 // UIkit
 // ==================================================================
 
-// 1. Your custom variables and variable overwrites.
-// $global-link-color: #DA7D02;
+// Ukraine: custom variables/overwrites
 
-// 2. Import default variables and available mixins.
+// $global-primary-background: #09aa9c;
+$global-primary-background: #938ed5;
+$global-link-color: $global-primary-background;
+$global-link-hover-color: darken($global-link-color, 10%);
+$global-secondary-background: #302326;
+$global-muted-background: #efefef;
+$global-font-family: 'Quicksand', sans-serif;
+$base-heading-font-family: 'Fredoka One', sans-serif;
+$base-em-color: black;
+
+// me: custom variables/overwrites
+
+$global-background: #fafafa;
+$section-default-background: white;
+$border-rounded-border-radius: 10px;
+$tab-item-font-size: inherit;
+$tab-item-border-width: 2px;
+$button-text-transform: none;
+$button-secondary-background: #09aa9c;
+$tab-item-text-transform: none;
+$global-control-height: 35px;
+
+// default variables and mixins import
+
 @import "node_modules/uikit/src/scss/variables-theme.scss";
 @import "node_modules/uikit/src/scss/mixins-theme.scss";
 
-// 3. Your custom mixin overwrites.
-// @mixin hook-card() { color: #000; }
+// custom mixins
 
-// 4. Import UIkit.
+$button-font-size: $global-font-size;
+
+@mixin hook-container-misc() {
+
+    .uk-container {
+        .uk-container {
+            padding-left: $global-medium-gutter;
+            padding-right: $global-medium-gutter;
+        }
+    }
+
+}
+
+// UIkit import
+
 @import "node_modules/uikit/src/scss/uikit-theme.scss";
 
 // ==================================================================
 // Base
 // ==================================================================
 
-* {
-    font-family: 'Quicksand', sans-serif;
-}
-
 body {
 
     margin: 0;
-    background-color: rgb(248, 248, 248);
+    background-image: url(res/background.png);
+    background-size: 150px 150px;
 
 }
 
@@ -37,240 +69,19 @@ header {
 
 }
 
-// ==================================================================
-// Main
-// ==================================================================
+h1 {
 
-main {
+    text-decoration: none;
+    border-bottom: .0625em solid lighten($global-primary-background, 20%);
+    box-shadow: 0 -.25em 0 lighten($global-primary-background, 20%) inset;
 
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 70px;
-    padding-bottom: 70px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 50px;
+    display: inline;
 
 }
 
 // ==================================================================
-// User
+// Game Links
 // ==================================================================
-
-.user {
-
-    width: 100%;
-
-    display: flex;
-    column-gap: 60px;
-    justify-items: left;
-
-}
-
-.user-header {
-
-    display: flex;
-    flex-direction: column;
-    row-gap: 40px;
-
-}
-
-.user-details {
-
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-
-}
-
-.user-greeting {
-
-    font-family: 'Fredoka One', sans-serif;
-    font-size: 42px;
-
-}
-
-.user-trophies {
-
-    display: flex;
-    flex-direction: row;
-    column-gap: 40px;
-
-}
-
-.user-trophy {
-
-    display: flex;
-    flex-direction: column;
-    row-gap: 15px;
-
-}
-
-.user-trophy-display {
-
-    display: flex;
-    flex-direction: row;
-    column-gap: 50px;
-
-}
-
-.user-trophy-text {
-
-    font-size: 23px;
-
-}
-
-.user-trophy-number {
-
-    align-self: center;
-
-    font-size: 44px;
-
-}
-
-.user-trophy-image {
-
-    opacity: 0;
-
-    width: 60px;
-    height: 60px;
-
-}
-
-.fade-in {
-
-    animation: fade-in 1s forwards;
-
-}
-
-@keyframes fade-in {
-    0% { opacity: 0 }
-    100% { opacity: 1 }
-}
-
-.create-game {
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-
-    width: 150px;
-    height: 50px;
-    border-radius: 10px;
-
-    font-size: 20px;
-    font-family: 'Fredoka One', sans-serif;
-    color: white;
-
-    /* background-color: rgb(120, 232, 164); */
-    /* background-color: rgb(120, 143, 232); */
-    background-color: #938ed5;
-
-    opacity: 0.8;
-
-}
-
-.create-game:hover {
-
-    cursor: pointer;
-    opacity: 1;
-
-}
-
-// ==================================================================
-// Cards
-// ==================================================================
-
-.cards {
-
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-
-}
-
-.card {
-
-    width: 100%;
-    box-sizing: border-box;
-    padding: 40px;
-
-    background-color: white;
-    box-shadow: 0 5px 15px rgba(0,0,0,.08);
-    border-radius: 10px;
-
-}
-
-.card-header {
-
-    display: flex;
-
-}
-
-.card-title {
-
-    font-size: 24px;
-    flex-grow: 1;
-
-}
-
-.card-minmax {
-
-    width: 30px;
-
-}
-
-.card-minmax:hover {
-
-    cursor: pointer;
-
-}
-
-// ==================================================================
-// Card content
-// ==================================================================
-
-table {
-    
-    width: 100%;
-    margin-top: 15px;
-
-    text-align: left;
-    border-collapse: collapse;
-
-}
-
-th {
-
-    padding: 16px 12px;
-
-    font-size: 14px;
-    font-weight: 400;
-    color: #999;
-
-    border-bottom: 1px solid #e5e5e5;
-
-}
-
-td {
-
-    padding: 16px 12px;
-
-}
-
-table tr:not(:first-child) {
-
-    border-top: 1px solid #e5e5e5;
-
-}
 
 .player-link {
 
@@ -290,7 +101,6 @@ table tr:not(:first-child) {
     border: 1px solid #e5e5e5;
     padding-left: 10px;
     padding-right: 10px;
-    background-color: #f7f7f7;
 
     font-family: 'Courier New', Courier, monospace;
 
@@ -303,14 +113,15 @@ table tr:not(:first-child) {
 
 .player-clipboard {
 
-    width: 20px;
+    box-sizing: content-box;
 
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: $global-small-gutter;
+    padding-right: $global-small-gutter;
+
     border-radius: 0 5px 5px 0;
-    border: 1px solid #e5e5e5;
-
-    background-color: white;
+    border-style: solid;
+    border-color: #e5e5e5;
+    border-width: 1px 1px 1px 0;
 
     opacity: 0.6;
 
@@ -323,28 +134,95 @@ table tr:not(:first-child) {
 
 }
 
-.go-to-game {
+// ==================================================================
+// Game Buttons
+// ==================================================================
+
+.game-action {
 
     float: right;
 
-    width: 120px;
-    height: 35px;
-
-    border-radius: 5px;
-    color: white;
-    background-color: #938ed5;
-    opacity: 0.8;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-
 }
 
-.go-to-game:hover {
+// ==================================================================
+// Game Notes
+// ==================================================================
 
-    cursor: pointer;
-    opacity: 1;
+.note {
+
+    &:hover {
+
+        .edit-note-button {
+
+            opacity: 1;
+
+        }
+
+    }
+
+    input {
+
+        background-color: $section-default-background;
+        border: none;
+        padding: 0;
+
+        &:focus {
+
+            background-color: $section-default-background;
+            border-bottom: 1px solid black;
+
+        }
+
+    }
+
+    input:disabled {
+
+        background-color: $section-default-background;
+
+    }
+
+    .edit-note-button {
+
+        padding-left: $global-small-gutter;
+        padding-right: $global-small-gutter;
+
+        box-sizing: content-box;
+
+        opacity: 0;
+        transition: opacity 0.1s;
+
+    }
+
+    .edit-note-button:hover {
+
+        cursor: pointer;
+        opacity: 1;
+    
+    }
+
+    .edit-note-buttons {
+
+        padding-left: $global-small-gutter;
+        padding-right: $global-small-gutter;
+
+        box-sizing: content-box;
+
+        display: none;
+
+        img {
+
+            opacity: 0.6;
+            transition: opacity 0.1s;
+
+        }
+
+        img:hover {
+
+            cursor: pointer;
+            opacity: 1;
+
+        }
+    
+    }
 
 }
