Progress bar functionality.

--- a/index.css
+++ b/index.css
@@ -12038,6 +12038,18 @@ h1 {
   display: inline;
 }
 
+.progress-bar {
+  width: 500px;
+  height: 40px;
+  background-color: #f0f0f0;
+}
+.progress-bar div {
+  height: 100%;
+  width: 25%;
+  background-color: #fc8ba1;
+  border-radius: 10px 0 0 10px;
+}
+
 .player-link {
   width: 320px;
   height: 35px;
