--- a/index.scss
+++ b/index.scss
@@ -69,6 +69,27 @@ h1 {
 }
 
 // ==================================================================
+// Progress Bar
+// ==================================================================
+
+.progress-bar {
+
+    width: 500px;
+    height: 40px;
+    background-color: #f0f0f0;
+
+    div {
+
+        height: 100%;
+        width: 25%;
+        background-color: rgb(252, 139, 161);
+        border-radius: $border-rounded-border-radius 0 0 $border-rounded-border-radius;
+
+    }
+
+}
+
+// ==================================================================
 // Game Links
 // ==================================================================
 
