Adjust colours for consistency with rest of site.

--- a/index.scss
+++ b/index.scss
@@ -4,11 +4,10 @@
 
 // Ukraine: custom variables/overwrites
 
-// $global-primary-background: #09aa9c;
-$global-primary-background: #938ed5;
+$global-primary-background: #09aa9c;
 $global-link-color: $global-primary-background;
 $global-link-hover-color: darken($global-link-color, 10%);
-$global-secondary-background: #302326;
+// $global-secondary-background: #302326;
 $global-muted-background: #efefef;
 $global-font-family: 'Quicksand', sans-serif;
 $base-heading-font-family: 'Fredoka One', sans-serif;
@@ -17,12 +16,13 @@ $base-em-color: black;
 // me: custom variables/overwrites
 
 $global-background: #fafafa;
+$global-secondary-background: #fc8ba1;
 $card-default-background: white;
-$border-rounded-border-radius: 10px;
+// $border-rounded-border-radius: 10px;
 $tab-item-font-size: inherit;
 $tab-item-border-width: 2px;
 $button-text-transform: none;
-$button-secondary-background: #09aa9c;
+// $button-secondary-background: #09aa9c;
 $tab-item-text-transform: none;
 $global-control-height: 35px;
 
@@ -61,8 +61,8 @@ header {
 h1 {
 
     text-decoration: none;
-    border-bottom: .0625em solid lighten($global-primary-background, 20%);
-    box-shadow: 0 -.25em 0 lighten($global-primary-background, 20%) inset;
+    border-bottom: .0625em solid lighten($global-secondary-background, 17%);
+    box-shadow: 0 -.25em 0 lighten($global-secondary-background, 17%) inset;
 
     display: inline;
 
@@ -82,7 +82,7 @@ h1 {
 
         height: 100%;
         width: 25%;
-        background-color: rgb(252, 139, 161);
+        background-color: $global-secondary-background;
         border-radius: $border-rounded-border-radius 0 0 $border-rounded-border-radius;
         
         animation: 1s ease-out 0s 1 slide-in;
