Replace copy link icons with UIkit icons.

--- a/index.scss
+++ b/index.scss
@@ -130,7 +130,7 @@ h1 {
 
 .player-clipboard {
 
-    box-sizing: content-box;
+    // box-sizing: content-box;
 
     padding-left: $global-small-gutter;
     padding-right: $global-small-gutter;
