--- a/index.scss
+++ b/index.scss
@@ -243,3 +243,25 @@ h1 {
     }
 
 }
+
+// ==================================================================
+// Choose Game Grid
+// ==================================================================
+
+#game-grid {
+    
+    .uk-card {
+
+        filter: grayscale(50%);
+        transition: 0.2s;
+
+        &:hover {
+
+            cursor: pointer;
+            filter: grayscale(0%);
+
+        }
+
+    }
+
+}
