Dropdown game details.

--- a/index.scss
+++ b/index.scss
@@ -260,8 +260,20 @@ h1 {
             cursor: pointer;
             filter: grayscale(0%);
 
+            // .game-details {
+
+            //     display: block;
+
+            // }
+
         }
 
     }
+
+    // .game-details {
+
+    //     display: none;
+
+    // }
 
 }
