--- a/index.scss
+++ b/index.scss
@@ -257,23 +257,33 @@ h1 {
 
         &:hover {
 
-            cursor: pointer;
             filter: grayscale(0%);
 
-            // .game-details {
+            .game-details {
 
-            //     display: block;
+                opacity: 1;
+                height: 80px;
 
-            // }
+                button {
+                    display: block;
+                }
+
+            }
 
         }
 
     }
 
-    // .game-details {
+    .game-details {
 
-    //     display: none;
+        opacity: 0;
+        height: 0px;
+        transition: 0.2s;
 
-    // }
+        button {
+            display: none;
+        }
+
+    }
 
 }
